--- a/react-vite/src/components/ConnectionComponents/ConnectionBoard/ConnectionWordTile/ConnectionWordTile.css
+++ b/react-vite/src/components/ConnectionComponents/ConnectionBoard/ConnectionWordTile/ConnectionWordTile.css
@@ -14,6 +14,8 @@
     box-sizing: border-box;
     transition: all 250ms ease;
     animation: fade-in 500ms;
+    word-break: break-all;
+    padding: 8px;
 }
 
 @keyframes fade-in {
